Fix weird font scaling on mobile safari

--- a/public/resources/css/index.css
+++ b/public/resources/css/index.css
@@ -1,3 +1,8 @@
+*{
+    -webkit-text-size-adjust: none;
+    text-size-adjust: none;
+}
+
 html{
     background-color: black;
     background: url(../img/bg.webp?v2) no-repeat center center fixed;
